# llmi

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
src/: app.rs  chatgpt.rs  event.rs  lib.rs  llm.rs  llm_test.rs  main.rs  term.rs
