[package]
name = "llmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dotenv = "0.15.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tui-textarea = "0.4.0"
