[package]
name = "llmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dotenv = "0.15.0"
eventsource-stream = "0.2.3"
futures = "0.3.30"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
regex = "1.10.4"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
reqwest-eventsource = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
tui-scrollview = "0.3.3"
tui-textarea = "0.4.0"
